<resources>
    <string name="app_name">PesquisaCorona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NOME DO CIDADÃO</string>
    <string name="nav_header_subtitle">ver</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">CADASTRO</string>

    <string name="menu_home">ESTATÍSTICAS</string>
    <string name="menu_infor">RECOMENDAÇÕES</string>
    <string name="menu_ssude">SINTOMAS</string>
    <string name="ATUALIZAR">ATUALIZAR</string>
    <string name="softcod">softcod</string>
    <string name="nome">PREFEITURA</string>
    <string name="voltar">VOLTAR</string>
    <string name="sairUsuarioEdCa">REALMENTE DESEJA SAIR?</string>
    <string name="ok">SIM</string>
    <string name="cidadao_nome">NOME</string>
    <string name="cidadao_apelido">APELIDO</string>
    <string name="cidadao_endereco">ENDEREÇO</string>
    <string name="cidadao_doenca">ENFERMIDADE</string>
    <string name="cidadao_nascimento">DATA DE NASCIMENTO</string>
    <string name="salvar">SALVAR</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastrese">CADASTRE-SE</string>
    <string name="esqueceuSenha">RECUPERAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="senha">SENHA</string>
    <string name="prossesando">EM PROCESSO</string>
    <string name="aguarde">QUEIRA ESPERAR, POR FAVOR</string>
    <string name="invalidEmailText">EMAIL ERRADO</string>
    <string name="cancel">CANCELAR</string>
    <string name="no_permissao">PERMISSÃO NEGADA</string>
    <string name="sair">SAIR</string>
    <string name="keyEmail">emailChave</string>
    <string name="invalidPasswordText">SENHA INVALIDA</string>
    <string name="servidor">http://softcod.com.br/api</string>
    <string name="informarEmail">INFORME O EMAIL</string>
    <string name="idNotifique">notificacaoID</string>
    <string name="sem_internet">SEM SINAL</string>
    <string name="cidadao_email">EMAIL</string>
    <string name="authenticating">Verificando os dados</string>
    <string name="pleaseWait">Um momento</string>
    <string name="bairro">BAIRRO</string>
    <string name="cidade">CIDADE</string>
    <string name="rua">RUA</string>
    <string name="num">NUMERO</string>
    <string name="erroLogin">TA TUDO CERTO?</string>
    <string name="sintoma">keySintoma</string>
    <string name="nivel">nivelKey</string>
    <string name="urlWebExterno">http://portal.saude.pe.gov.br/noticias/secretaria-executiva-de-vigilancia-em-saude/imunizacao-contra-covid-19-documentos-e-tira</string>
    <string name="enviar">ENVIAR</string>
    <string name="keyIdUsuario">id_usuario</string>
    <string name="keyDoenca">doencaKey</string>
    <string name="keyApelido">apelidoKey</string>
    <string name="keyBairro">bairroKey</string>
    <string name="keyNumero">numeroKey</string>
    <string name="keyNasimento">nascimentoKey</string>
</resources>