<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.softcod.pesquisacorona.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/nav_informacao"
        android:name="com.softcod.pesquisacorona.ui.gallery.InformeFragment"
        android:label="@string/menu_infor"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pesquisa"
        android:name="com.softcod.pesquisacorona.ui.slideshow.PesquisaFragment"
        android:label="@string/menu_ssude"
        tools:layout="@layout/fragment_slideshow"
        />

</navigation>