<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <EditText
        android:id="@+id/connection_nameConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cidadao_nome"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/connection_apelidoConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cidadao_apelido"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_nameConfEditText" />

    <EditText
        android:id="@+id/connection_enderecoConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cidadao_endereco"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_apelidoConfEditText" />

    <EditText
        android:id="@+id/connection_doencaConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cidadao_doenca"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_enderecoConfEditText" />

    <EditText
        android:id="@+id/connection_nascimentoConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cidadao_nascimento"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_doencaConfEditText" />

    <EditText
        android:id="@+id/connection_senhaConfEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_nascimentoConfEditText" />
    <EditText
        android:id="@+id/connection_senhaConfEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_senhaConfEditText" />

    <ImageButton
        android:id="@+id/voltarBtn"
        android:layout_width="@dimen/btnQd"
        android:layout_height="@dimen/btnQd"
        android:background="@color/purple_500"
        android:contentDescription="@string/voltar"
        android:src="@android:drawable/ic_menu_revert"
        android:textSize="15sp"
        android:onClick="voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salvarBtn"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_nascimentoConfEditText" />

    <ImageButton
        android:id="@+id/salvarBtn"
        android:layout_width="@dimen/btnQd"
        android:layout_height="@dimen/btnQd"
        android:layout_marginEnd="68dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/salvar"
        android:onClick="salvar"
        android:src="@android:drawable/ic_menu_save"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/voltarBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/voltarBtn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>