<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ResetPasswordActivity"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/connection_relativeLayoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/connection_connectionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom"
            android:text="@string/nome"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

    </Toolbar>


    <Button
        android:id="@+id/voltar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:background="@android:color/transparent"
        android:text="@string/voltar"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_enviar" />


    <EditText
        android:id="@+id/reset_emailEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edtTex"
        android:layout_marginTop="28dp"
        android:autofillHints="full"
        android:hint="@string/informarEmail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/connection_enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/material_on_primary_disabled"
        android:drawableRight="@android:drawable/ic_menu_send"
        android:onClick="recuperarSenhaButtonOnClick"
        android:text="@string/ok"
        android:textColor="@color/teal_700"
        android:textColorHighlight="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_emailEditText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="96dp"
        android:text="@string/informarEmail"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_relativeLayoutText" />


</androidx.constraintlayout.widget.ConstraintLayout>
